# uni

./: .gitignore  CMakeLists.txt  README.md  justfile
csci-060/: CMakeLists.txt  README.md
csci-060/src/hw7/: test.cpp
csci-061/: CMakeLists.txt  justfile
csci-061/src/: main.cpp
csci-061/src/hw2/: p2.cpp
csci-061/src/hw3/: p2.cpp
csci-062/: Makefile  README.md  SPEC.md  build.zig  csci062-hw7.ipynb  explain.txt  flake.nix  justfile  posts.json  qtdemo.pro  result  tests.py
csci-062/docs/: explain2.txt
csci-062/hw/6/: problem1.cpp
csci-062/hw6/: bytes3.txt  hexdata.txt
csci-062/labs/3/: main.cpp
csci-062/labs/4/: git-lab.org
csci-062/qtdemo/: clickgamewindow.cpp  clickgamewindow.h  clickgamewindow.ui
csci-062/src/: network.cpp  network.h  post.cpp  post.h  postwidget.h  social_network.cpp  socialnetworkwindow.cpp  socialnetworkwindow.h  socialnetworkwindow.ui  user.cpp  user.h
csci-062/src/tests/: command_line_tests.py
csci-062/tests/: cli-test.py  cli1.py  cli2.py  test_network_read_user.cpp  test_network_read_user2.cpp
csci-062/tests/2/: test_distance_user_1.cpp  test_distance_user_2.cpp  test_distance_user_3.cpp  test_groups_1.cpp  test_groups_2.cpp  test_shortest_path_1.cpp  test_shortest_path_2.cpp  test_shortest_path_3.cpp  test_shortest_path_none.cpp  test_suggest_friends_1.cpp  test_suggest_friends_2.cpp  test_suggest_friends_3.cpp  test_suggest_friends_none.cpp
csci-062/tests/3/: test_ipost6.cpp
csen-020/: build.zig
csen-020/env/: makefile
csen-020/env/src/: Lab3B-Implementation.s  Lab9C-Implementation.s
src/: as_int.cpp  as_int.h  bigint.cpp  main.cpp  main.nim
src/homework1/: sol1.cpp  sol2.cpp
src/homework2/: sol2.cpp
src/homework7/: p1.md  p2.md  p3.cpp
src/hw7/: p3.cpp  p3.h
src/lab5/: input.txt  output.txt
